objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active_contracts__c</fullName>
        <label>Active contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Max_Usage__c</fullName>
        <label>Billing Max Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Usage__c</fullName>
        <label>Billing Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_renewal_date__c</fullName>
        <label>Contract renewal date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Rep__c</fullName>
        <label>Customer Success Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Alex Bamford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jebiaus Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nick Scott</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logo_on_Import_io_website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo on Import.io website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>myself only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001-5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5001-10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10001+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prod_Id__c</fullName>
        <label>Prod Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queries_last_30_days__c</fullName>
        <label>Queries (last 30 days)</label>
        <summarizedField>User_Account__c.Queries_last_30_days__c</summarizedField>
        <summaryForeignKey>User_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cbit__ClearbitDomain__c</fullName>
        <formula>SUBSTITUTE(
if(find(&quot;/&quot;,if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))&gt;0,left(if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)),find(&quot;/&quot;,if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))-1),if(find(&quot;www.&quot;,Website)&gt;0,IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//www.&quot;,Website)+5),NULL),Website),IF(FIND(&quot;//&quot;,Website)&gt;0,substitute(Website,left(Website,find(&quot;//&quot;,Website)+1),NULL),Website)))

,&apos;www.&apos;, &apos;&apos;)</formula>
        <label>Clearbit Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit__ClearbitReady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClearbitReady</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cbit__Clearbit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clearbit</label>
        <referenceTo>cbit__Clearbit__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>recurly__Account_Code__c</fullName>
        <label>Account Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>recurly__Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recurly__Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurly__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurly__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurly__In_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recurly__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurly__Past_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recurly__Plan_Code__c</fullName>
        <label>Plan Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurly__Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurly__Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recurly__UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurly__Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>recurly_v2__Average_Last_3_Invoices__c</fullName>
        <label>Average Last 3 Invoices</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>recurly_v2__Total_Amount_Outstanding__c</fullName>
        <label>Total Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>recurly_v2__Total_Invoices_Sum__c</fullName>
        <label>Total Invoices Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>recurly_v2__Total_Payments_Sum__c</fullName>
        <label>Total Payments Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>totango__TotangoActive_users_last_14_days__c</fullName>
        <description>The number of unique active users that accessed the system in the last 14 days.</description>
        <label>Totango Active users (last 14 days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totango__TotangoEngagementChange__c</fullName>
        <label>Totango Engagement Change</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totango__TotangoEngagement__c</fullName>
        <label>Totango Engagement</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totango__TotangoInsights__c</fullName>
        <label>Totango Insights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Account_Health_Icon__c</fullName>
        <formula>IMAGE( CASE( totango__Totango_Account_Health__c , &quot;Good&quot;, &apos;https://app.totango.com/images/health/circle-green.png&apos;, &quot;Average&quot;, &apos;https://app.totango.com/images/health/circle-yellow.png&apos;, &quot;Poor&quot;, &apos;https://app.totango.com/images/health/circle-red.png&apos;, &apos;https://app.totango.com/images/emptyPixel.png&apos;), &quot;&quot;,15,15)</formula>
        <label>Totango Account Health Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Account_Health_Reason__c</fullName>
        <label>Totango Account Health Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Account_Health__c</fullName>
        <label>Totango Account Health</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Health_Profile_Name__c</fullName>
        <label>Totango Health Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Insights__c</fullName>
        <label>Totango Insights DEPRECATED</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Last_Update__c</fullName>
        <description>Last update timestamp of totango api</description>
        <label>Totango Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>totango__Totango_License_Utilization__c</fullName>
        <label>Totango_License_Utilization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Online_Status__c</fullName>
        <formula>IF( CONTAINS( totango__Totango_isOnline__c , &quot;totango&quot;), IMAGE( totango__Totango_isOnline__c, &quot;N/A&quot;) , IMAGE(&quot;https://app.totango.com/images/emptyPixel.png&quot;,&quot;N/A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totango Online Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Overall_Time_Spent__c</fullName>
        <label>Totango Overall Time Spent</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_URL__c</fullName>
        <description>URL to Totango Platform</description>
        <label>Totango URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>totango__Totango_Usage_Frequency__c</fullName>
        <label>Totango Usage Frequency</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totango__Totango_isOnline__c</fullName>
        <description>Indicates whether customer is currently using your service</description>
        <label>Totango Online Status</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>Accounts_With_Active_Contracts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Active_contracts__c</columns>
        <columns>recurly__Account_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_contracts__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>Accounts With Active Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>totango__Accounts_By_Activity</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>totango__Totango_Account_Health_Icon__c</columns>
        <columns>totango__Totango_Online_Status__c</columns>
        <columns>totango__TotangoEngagement__c</columns>
        <columns>totango__TotangoEngagementChange__c</columns>
        <columns>totango__TotangoInsights__c</columns>
        <columns>totango__Totango_Last_Update__c</columns>
        <columns>totango__Totango_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>totango__Totango_URL__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Accounts By Activity</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>